Add configurable first-run tab blocking

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "shutup",
   "version": "1.0.0",
-  "description": "Auto-closes Adblock Plus update / first-run tabs.",
+  "description": "Auto-closes configurable extension first-run or update tabs.",
   "permissions": ["tabs"],
   "background": {
     "service_worker": "background.js"
