Add auto-record toggle and capture startup tabs

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "shutup",
   "version": "1.0.0",
-  "description": "Auto-closes Adblock Plus update / first-run tabs.",
-  "permissions": ["tabs"],
+  "description": "Auto-closes configurable extension first-run or update tabs.",
+  "permissions": ["tabs", "storage"],
   "background": {
     "service_worker": "background.js"
   },
@@ -14,6 +14,7 @@
     "128": "icon128.png"
   },
   "action": {
-    "default_title": "shutup"
+    "default_title": "shutup",
+    "default_popup": "popup.html"
   }
 }
