Add configurator page for manual first-run entries

--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,12 @@
   "manifest_version": 3,
   "name": "shutup",
   "version": "1.0.0",
-  "description": "Auto-closes Adblock Plus update / first-run tabs.",
-  "permissions": ["tabs"],
+  "description": "Auto-closes configurable extension first-run or update tabs.",
+  "permissions": ["tabs", "storage"],
   "background": {
     "service_worker": "background.js"
   },
+  "options_page": "configurator.html",
   "icons": {
     "16": "icon16.png",
     "32": "icon32.png",
@@ -14,6 +15,7 @@
     "128": "icon128.png"
   },
   "action": {
-    "default_title": "shutup"
+    "default_title": "shutup",
+    "default_popup": "popup.html"
   }
 }
