Redo theme for Options page. Fix persistent storage

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "shutup",
   "version": "1.0.0",
   "description": "Auto-closes configurable extension first-run or update tabs.",
-  "permissions": ["tabs"],
+  "permissions": ["tabs", "storage"],
   "background": {
     "service_worker": "background.js"
   },
